@startuml 7.3

class Api {
    +getUserList()
}

class Db {
    +getUserList()
}

interface ApiConfigInterface {
    +getId()
    +getPassword()
}

interface DbConfigInterface {
    +getUser()
    +getPassword()
}

class ApiConfig {
    +getId()
    +getPassword()
}

class DbConfig {
    +getUser()
    +getPassword()
}

Api ..> ApiConfigInterface
Db ..> DbConfigInterface
ApiConfigInterface <|.. ApiConfig
DbConfigInterface <|.. DbConfig

@enduml
